<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:backgroundTint="#F8F8F8"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="10dp"
        android:text="@string/or"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="82dp"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SignButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="89dp"
        android:text="@string/sign_in_to_speed_up_the_checkout_xa_process_and_manage_your_orders"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="162dp"
        android:layout_height="29dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="214dp"
        android:text="@string/have_an_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/SignButton"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#23224F"
        android:radius="100dp"
        android:text="SIGN IN"
        android:textColor="#FFFFFF"
        app:layout_constraintCircleRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/img_71"
        android:contentDescription="@string/sign_in"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="114dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#A3A3A3"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Email Adress"
        android:textColor="#A3A3A3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/email_adres" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#A3A3A3"
        android:ems="10"
        android:text="Password"
        android:textColor="#A3A3A3"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:text="@string/password" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/alata"
        android:text="Qazaq Republic"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/line_42"
        android:text="@string/register"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>