<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#23224F"
        android:radius="100dp"
        android:text="@string/register_now"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintCircleRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="11dp"
        android:text="@string/or"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="182dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/img_71"
        android:contentDescription="@string/sign_in"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textReg"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="21dp"
        android:text="Register to speed up the checkout  process and manage your order"
        app:layout_constraintBottom_toTopOf="@+id/textFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="37dp"
        android:text="By you clicking Register Now, you agree to our  Term Conditions and Privacy Policy."
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/line_42"
        android:text="@string/sign_in"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textLastName"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="143dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/alata"
        android:text="Qazaq Republic"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="162dp"
        android:layout_height="29dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="8dp"
        android:text="@string/have_an_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/textFirstName"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="text"
        android:text="First name"
        android:textColor="#A3A3A3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textLastName"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="text"
        android:text="Last name"
        android:textColor="#A3A3A3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textReg" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#A3A3A3"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Email Adress"
        android:textColor="#A3A3A3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFirstName"
        tools:text="@string/email_adres" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#A3A3A3"
        android:ems="10"
        android:text="Password"
        android:textColor="#A3A3A3"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:text="@string/password" />
</androidx.constraintlayout.widget.ConstraintLayout>